--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@ label {
 
 input {
   display: block;
+  width: 15vw;
 }
 
 h2 {
@@ -28,6 +29,10 @@ h2 {
 
 h4 {
   margin: 0;
+}
+
+table {
+  width: 15vw;
 }
 
 .container {
